--- a/less/bootmetro/bootmetro-ui-light.less
+++ b/less/bootmetro/bootmetro-ui-light.less
@@ -171,7 +171,7 @@ button[aria-selected=true]:active .win-commandicon {
    color: #FFF;
 }
 .btn:first-child {
-   *margin-left: 0;
+   .MarginLeftOrRight("margin-left",0);
 }
 
 .btn:hover {
