--- a/less/bootmetro/bootmetro.less
+++ b/less/bootmetro/bootmetro.less
@@ -7,6 +7,8 @@
  *
  */
 
+// Import RTLit library to make BootMetro RTL
+@import "RTLit.less";
 
 // Core variables and mixins
 @import "variables.less"; // Modify this for custom colors, font-sizes, etc
