--- a/less/bootmetro/dropdowns.less
+++ b/less/bootmetro/dropdowns.less
@@ -77,7 +77,7 @@ a.header-dropdown {
 }
 .dropdown-submenu > a:after {
    border: 0;
-   margin-right: -5px;
+   .MarginLeftOrRight("margin-right",-5px);
    margin-top: 0;
    color: #CCC;
    font-family: 'IcoMoon';
