--- a/less/bootmetro/mixins.less
+++ b/less/bootmetro/mixins.less
@@ -78,8 +78,8 @@
 
 /* General alignment styles
 -------------------------------------------------- */
-.align-right, th.align-right, td.align-right, .table th.align-right, .table td.align-right      {text-align: right}
-.align-left, th.align-left, td.align-left, .table th.align-left, .table td.align-left           {text-align: left}
+.align-right, th.align-right, td.align-right, .table th.align-right, .table td.align-right      {.TextAlignTo("right");}
+.align-left, th.align-left, td.align-left, .table th.align-left, .table td.align-left           {.TextAlignTo("left");}
 .align-center, th.align-center, td.align-center, .table th.align-center, .table td.align-center {text-align: center}
 
 
