--- a/less/bootmetro/modals-popovers.less
+++ b/less/bootmetro/modals-popovers.less
@@ -23,7 +23,7 @@
    border: 0;
 }
 .modal.message, .modal.warning {
-   left: 0;
+   .DockItem("left", 0);
    margin: 0;
    padding: 0 20%;
    width: 60%;
