--- a/less/bootmetro/navbar.less
+++ b/less/bootmetro/navbar.less
@@ -49,7 +49,7 @@
       .navbar.metro-navbar .nav > li > a {
          text-transform: uppercase;
          background-color: #DDD;
-         margin-right: 4px;
+         .MarginLeftOrRight("margin-right",4px);
          text-shadow: none;
       }
 
