--- a/less/bootmetro/responsive-768px-979px.less
+++ b/less/bootmetro/responsive-768px-979px.less
@@ -16,8 +16,8 @@
 
 @media (min-width: 321px) and (max-width: 1023px) {
    hr.win-command {
-      margin-left: 10px;
-      margin-right: 9px;
+      .MarginLeftOrRight("margin-left",10px);
+      .MarginLeftOrRight("margin-right",9px);
    }
 }
 
