--- a/less/bootmetro/scaffolding.less
+++ b/less/bootmetro/scaffolding.less
@@ -51,7 +51,7 @@ img {
 //   text-decoration: none;
 //   outline: 0;
 //   color: #5A5A5A;
-//   margin-left: 10px;
+//   .MarginLeftOrRight("margin-left",10px);
 //
 //   b {
 //      font-size: 32px;
@@ -71,14 +71,14 @@ img {
 
 //.top-info-block {
 //   display: block;
-//   float: left;
-//   margin-left: 8px;
+//   .FloatItem("left");
+//   .MarginLeftOrRight("margin-left",8px);
 //}
 
 #header-container {
    display: inline-block;
    vertical-align: top;
-   margin-left: 50px;
+   .MarginLeftOrRight("margin-left",50px);
 }
 
 header {
@@ -98,8 +98,8 @@ header {
 
 //// The Grid
 //.container-fluid {
-//   padding-left: 70px;
-//   padding-right: 70px;
+//   .PaddingLeftOrRight("padding-left", 70px);
+//   .PaddingLeftOrRight("padding-right", 70px);
 //}
 
 
