--- a/less/bootmetro/charms.less
+++ b/less/bootmetro/charms.less
@@ -2,7 +2,7 @@
    background-color: #004D60;
    position: fixed;
    top: 0%;
-   right: 0%;
+   .DockItem("right", 0%);
    width: 320px;
    height: 100%;
    padding: 0;
@@ -16,24 +16,24 @@
       .border-radius(50%);
    }
    .charms-section {
-      margin: 0 40px 40px 40px;
+      .SwapMargin(0, 40px, 40px, 40px);
    }
    a:hover {
       background-color: #216475;
    }
    .charms-header {
       position: relative;
-      padding: 40px 0 30px 0;
+      .SwapPadding(40px, 0, 30px, 0);
       a#pin-charms {
          color: #FFF;
          font-size: 11px;
          height: 20px;
          position: absolute;
-         right: 2px;
+         .DockItem("right", 2px);
          text-align: center;
          top: 2px;
          width: 20px;
-         margin-right: -24px;
+         .MarginLeftOrRight("margin-right",-24px);
       }
       a#pin-charms.active {
          background-color: #FFF;
@@ -43,7 +43,7 @@
       h2 {
          display: inline-block;
          color: #FFF;
-         margin-left: 10px;
+         .MarginLeftOrRight("margin-left",10px);
       }
    }
    hr {
@@ -69,7 +69,7 @@
    min-width: 350px;
 }
 #charms.slide {
-   right: -320px;
+   .DockItem("right", -320px);
    -webkit-transition: all 0.36s ease;
       -moz-transition: all 0.36s ease;
        -ms-transition: all 0.36s ease;
@@ -77,5 +77,5 @@
            transition: all 0.36s ease;
 }
 #charms.slide.in {
-   right: 0;
+   .DockItem("right", 0);
 }
